--- a/PDFConvert/PDFConvert.csproj
+++ b/PDFConvert/PDFConvert.csproj
@@ -5,11 +5,16 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Title>PDF Converter Library for .NET</Title>
-        <Description>A lightweight .NET library for converting documents from PDF format to html raster</Description>
-        <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+        <PackageId>PDFConverter.Engine</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>93ToXic93</Authors>
+        <Company>YourCompany</Company>
+        <Description>Converts PDF documents into self-contained HTML pages using PDFium + SkiaSharp.</Description>
+        <PackageTags>pdf html convert rasterize webp png jpeg</PackageTags>
+        <RepositoryUrl>https://github.com/93ToXic93/PDFConverter</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <PackageTags>pdf convert export document dotnet</PackageTags>
+        <PackageProjectUrl>https://github.com/93ToXic93/PDFConverter</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
