--- a/PDFConvert/PDFConvert.csproj
+++ b/PDFConvert/PDFConvert.csproj
@@ -5,22 +5,36 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageId>PDFConverter.Engine</PackageId>
-        <Version>1.0.0</Version>
-        <Authors>93ToXic93</Authors>
-        <Company>YourCompany</Company>
-        <Description>Converts PDF documents into self-contained HTML pages using PDFium + SkiaSharp.</Description>
-        <PackageTags>pdf html convert rasterize webp png jpeg</PackageTags>
-        <RepositoryUrl>https://github.com/93ToXic93/PDFConverter</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <PackageProjectUrl>https://github.com/93ToXic93/PDFConverter</PackageProjectUrl>
+        <Title>PDF Converter Library for .NET</Title>
+        <Description>A lightweight .NET library for converting documents from PDF format to html raster</Description>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>pdf convert export document dotnet</PackageTags>
+        <Copyright>Adrian Ivanov</Copyright>
+        <PackageProjectUrl>https://github.com/93ToXic93/PDFConverter </PackageProjectUrl>
+        <RepositoryUrl>https://github.com/93ToXic93/PDFConverter</RepositoryUrl>
+        <PackageReleaseNotes>Updating the build pattern to add the dll automaticly</PackageReleaseNotes>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <Version>1.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="PdfiumViewer.Native.x86_64.v8-xfa" Version="2018.4.8.256" />
-      <PackageReference Include="SkiaSharp" Version="3.119.0" />
-      <PackageReference Include="WebMarkupMin.Core" Version="2.19.0" />
+        <PackageReference Include="PdfiumViewer.Native.x86_64.v8-xfa" Version="2018.4.8.256" />
+        <PackageReference Include="SkiaSharp" Version="3.119.0" />
+        <PackageReference Include="WebMarkupMin.Core" Version="2.19.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="\"/>
+
+        <None Include="buildTransitive\PDFConvert.targets"
+              Pack="true"
+              PackagePath="buildTransitive\PDFConvert.targets" />
+
+        <None Include="runtimes\win-x64\native\pdfium.dll"
+              Pack="true"
+              PackagePath="runtimes/win-x64/native/pdfium.dll" />
+
     </ItemGroup>
 
 </Project>
