--- a/PDFConvert/PDFConvert.csproj
+++ b/PDFConvert/PDFConvert.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -15,7 +15,8 @@
         <RepositoryUrl>https://github.com/93ToXic93/PDFConverter</RepositoryUrl>
         <PackageReleaseNotes>Added New Method for Rendering the images only </PackageReleaseNotes>
         <PackageReadmeFile>README.md</PackageReadmeFile>
-        <Version>1.0.2</Version>
+        <Version>1.0.3</Version>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
